--- a/iBeaconTryout/Info.plist
+++ b/iBeaconTryout/Info.plist
@@ -22,6 +22,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Detect other devices via iBeacon</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Detect other devices via iBeacon</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -44,9 +54,5 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Detect other devices via iBeacon</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Detect other devices via iBeacon</string>
 </dict>
 </plist>
